style: fix <main> height on small devices

--- a/src/style/dashboard.css
+++ b/src/style/dashboard.css
@@ -13,6 +13,7 @@
   aside.sidebar{
     width: 100%;
     max-width: 100vw;
+    height: 2.5rem;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -26,6 +27,9 @@
       width: fit-content;
       padding: 5px 15px;
     }
+  }
+  main{
+    flex: 1;
   }
 }
 
